Fixed padding error on mobile size

--- a/avaz.scss
+++ b/avaz.scss
@@ -224,6 +224,18 @@ _____ABOUT PAGE________
       width: 100% !important;
     }
   }
+
+  #row1 {
+    padding: 0 !important;
+    width: 100%;
+    margin: 0 auto;
+  }
+
+  #row2 {
+    padding: 0 !important;
+    width: 100%;
+    margin: 0 auto;
+  }
 }
 
 // Medium
